Problem 2: description of data

--- a/p8105_hw3_amv2187.md
+++ b/p8105_hw3_amv2187.md
@@ -137,7 +137,16 @@ Problem 2
 data("instacart")
 ```
 
-What are the average/median/maximum number of items purchased by people? On what day(s) of the week are the most items purchased? The least? What types of food are purchased most often? Is there an association between the number of items a person purchased and the number of prior visits they've made? Is there a pattern that is commonly followed in the store? (i.e. an association between a product's aisle and order of addition to cart) At what time of day do most orders take place?
+The data in the 'instacart' dataset are compiled from online grocery orders via participating food stores. Each row corresponds to one purchased item, many of which can make up one order (one-to-many table). The dataset is large, with 1384617 rows (items ordered) and 15 variables. Some notable variables include the item ordered ('product\_name') and order number. There's also information about when the order was made, including the day of the week and hour of the day. There's also information about the aisle from which a product was ordered, but these aisles may not be entirely distinct. For example, there is a 'packaged produce' aisle, as well as a 'packaged vegetables and fruits' aisle. It's unclear what distinguishes these two things, but it may be explained by the fact that the dataset is a composite of multiple grocery stores, between which there may be discrepancies in aisle names and/or how data is reported.
+
+The data has potential to answer many questions, including but not limited to:
+
+What are the average/median/maximum number of items purchased by people?
+On what day(s) of the week are the most items purchased? The least?
+What types of food are purchased most often?
+Is there an association between the number of items a person purchased and the number of prior visits they've made?
+Is there a pattern that is commonly followed in the store? (i.e. an association between a product's aisle and order of addition to cart)
+At what time of day do most orders take place?
 
 ``` r
 aisles = instacart %>%
