--- a/p8105_hw3_amv2187.md
+++ b/p8105_hw3_amv2187.md
@@ -117,13 +117,12 @@ brfss_cleaned %>%
   geom_line(alpha = 0.5) +
   facet_grid(~response) + 
   labs(
-    title = 'Average proportion of responses',
+    title = 'Average proportion of responses across state',
     y = 'Average proportion of responses',
     x = 'Year'
   ) + 
   theme(axis.text.x = element_text(angle = 60, hjust = 1),
-        legend.position = "bottom") +
-  guides(colour = guide_legend(nrow = 4, byrow = T)) 
+        legend.position = "none") 
 ```
 
 ![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-4-1.png)
@@ -164,7 +163,7 @@ aisles %>% filter(n == max(.$n))
     ##   <chr>            <chr>       <int> <int>
     ## 1 fresh vegetables produce    150609   123
 
-There are 134 aisles in the dataset. The most items are ordered from the produce aisles (fresha and packaged vegetables and fruits).
+There are 134 aisles in the dataset. The most items are ordered from the produce aisles (fresh and packaged vegetables and fruits).
 
 ``` r
 aisles %>%
@@ -188,7 +187,7 @@ aisles %>%
 
 ![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-7-1.png)
 
-The above plot shows the total number of items purchased in each aisle, grouped by department. Number of items was transformed to a logarithmic scale to accomodate the large range of quantities (287, 150609). Produce was the most ordered items, with quantities in the 100,000+ range. i assume this to mean that orders were counted either by individual produce, or by weight (e.g. lbs, oz). Beauty products were the least ordered item.
+The above plot shows the total number of items purchased in each aisle, grouped by department. Number of items was transformed to a logarithmic scale to accomodate the large range of quantities (287, 150609). Produce was the most ordered items, with quantities in the 100,000+ range. I assume this to mean that orders were counted either by individual produce, or by weight (e.g. lbs, oz). Beauty products were the least ordered item.
 
 ``` r
 instacart %>%
@@ -212,7 +211,7 @@ instacart %>%
 | dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |        30|                          1612|
 | packaged vegetables fruits | Organic Baby Spinach                          |      9784|                         78493|
 
-The most-ordered item in the baking ingedients aisle was light brown sugar; in the dog food and care aisle was Snack Sticks Chicken and Rice Dog Treats; and the packaged fruits and vegetables aisles was organic baby spinach. Packaged baby spinach accounts for over 12% of the total number of items ordered from the package vegetables and fruits aisle, while the dog food and brown sugar make up a much smaller portion of the total items sold.
+The most-ordered item was light brown sugar in the baking ingedients aisle; Snack Sticks Chicken and Rice Dog Treats in the dog food and care aisle; and organic baby spinach in the packaged fruits and vegetables aisles. Packaged baby spinach accounts for over 12% of the total number of items ordered from the package vegetables and fruits aisle, while the dog food and brown sugar make up a much smaller portion of the total items sold.
 
 ``` r
 instacart %>%
@@ -251,6 +250,40 @@ ny_noaa_cleaned =
          tmax = as.numeric(tmax)/10, # convert temperature to degrees Celsius
          tmin = as.numeric(tmin)/10)
 
+apply(ny_noaa_cleaned[, 3:7], FUN = summary, MARGIN = 2)[7, ] / nrow(ny_noaa_cleaned) # proportion of rows that are NA for each variable
+```
+
+    ##      prcp      snow      snwd      tmax      tmin 
+    ## 0.0561958 0.1468960 0.2280331 0.4371025 0.4371264
+
+``` r
+# check to see what trends exist for missing temperature data
+ny_noaa_cleaned %>%
+  filter(is.na(tmin)) %>%
+  group_by(id) %>%
+  count %>%
+  arrange(desc(n))
+```
+
+    ## # A tibble: 728 x 2
+    ## # Groups:   id [728]
+    ##    id              n
+    ##    <chr>       <int>
+    ##  1 USC00304772 10957
+    ##  2 USC00306196 10957
+    ##  3 USC00309425 10957
+    ##  4 USC00303851 10926
+    ##  5 USC00306745 10926
+    ##  6 USC00301580 10896
+    ##  7 USC00303983 10896
+    ##  8 USC00305679 10870
+    ##  9 USC00301265 10866
+    ## 10 USC00305925 10866
+    ## # ... with 718 more rows
+
+The NOAA data contains weather information for a given day across many different weather stations. Data in the dataset is specific to New York weather stations between 1981 and 2010. Specifically, we have information about the amount of precipitation, snowfall, snow accumulation, and the maximum and minimum temperatures in any given day. It's a large dataset, with 2595176 entries across 747 stations over 30 years. There is a fair amount of missing data, mostly for the temperature variables - nearly half (43.7%) of entries are missing information about the daily temperature range. The number of missing entries appears to vary quite a bit by station, with some stations missing only 1 day, and others without any data; for example, station USC00304772 doesn't have any temperature data over the 30-year period.
+
+``` r
 ny_noaa_cleaned %>%
   filter(month %in% c('January', 'July')) %>%
   group_by(id, month, year) %>%
@@ -272,9 +305,9 @@ ny_noaa_cleaned %>%
         legend.position = 'none') # no legend (not necessary with facet_grid)
 ```
 
-![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-10-1.png)
+![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-11-1.png)
 
-The above figure represents the average maximum temperature across all stations in January and July each year from 1980-2010. While there are no obvious trends over time (the average maximum temperature in January 1980 and January 2010 are comparable), there does appear to be an oscillatory pattern. Temperature will climb and fall again, and this pattern repeats over time. It's also worth noting that this pattern lines up across months, that is, a warmer January corresopnds with a warmer July. But the magnitude of the temperature change from previous years is not necessarily reflected. There seems to be a larger range of maximum temperatures in January of any given year than in July, and the trends over time vary to a larger extend as well.
+The above figure represents the average maximum temperature across all stations in January and July each year from 1981-2010. While there are no obvious trends over time (the average maximum temperature in January 1981 and January 2010 are comparable), there does appear to be an oscillatory pattern. Temperature will climb and fall again, and this pattern repeats over time. It's also worth noting that this pattern lines up across months, that is, a warmer January corresopnds with a warmer July. But the magnitude of the temperature change from previous years is not necessarily reflected. There seems to be a larger range of maximum temperatures in January of any given year than in July, and the trends over time vary to a larger extend as well.
 
 ``` r
 max_v_min = 
@@ -308,7 +341,7 @@ temp_by_year =
 max_v_min + temp_by_year
 ```
 
-![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-11-1.png)
+![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-12-1.png)
 
 In plot (a) above, we can see that in general, the average minimum temperature is fairly close to the average maximum temperature (the relationship has a positive correlation). There are some outliers where the minimum temperature is notably lower than the maximum. We would need to do a weather station-specific and/or date-specific analysis to understand the nature of these outliers.
 
