--- a/p8105_hw3_amv2187.md
+++ b/p8105_hw3_amv2187.md
@@ -216,21 +216,20 @@ The most-ordered item was light brown sugar in the baking ingedients aisle; Snac
 ``` r
 instacart %>%
   filter(product_name %in% c('Pink Lady Apples', 'Coffee Ice Cream')) %>%
-  group_by(order_dow) %>%
-  rename('Day of the week' = order_dow) %>%
-  summarise('Average hour of purchase' = (mean(order_hour_of_day))) %>%
+  group_by(product_name, order_dow) %>%
+  rename('Day of the week' = order_dow,
+         ' ' = product_name) %>%
+  summarise('Average hour of purchase' = (round(mean(order_hour_of_day)))) %>%
+  spread('Day of the week', 'Average hour of purchase') %>%
   knitr::kable(caption = 'Average time of purchase of Pink Lady apples and coffee ice cream')
 ```
 
-|  Day of the week|  Average hour of purchase|
-|----------------:|-------------------------:|
-|                0|                  13.60000|
-|                1|                  12.17391|
-|                2|                  12.83824|
-|                3|                  14.68519|
-|                4|                  13.17308|
-|                5|                  12.64286|
-|                6|                  13.25000|
+|                  |    0|    1|    2|    3|    4|    5|    6|
+|------------------|----:|----:|----:|----:|----:|----:|----:|
+| Coffee Ice Cream |   14|   14|   15|   15|   15|   12|   14|
+| Pink Lady Apples |   13|   11|   12|   14|   12|   13|   12|
+
+In general, it seems that pink lady apples are purchased earlier in the day than coffee ice cream by a couple of hours.
 
 Problem 3
 ---------
